[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Fog.gd" type="Script" id=1]
[ext_resource path="res://Assets/Background/cloudBacking.jpg" type="Texture" id=2]

[node name="Fog" type="Control"]
modulate = Color( 1, 1, 1, 0.521569 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
use_parent_material = true
margin_top = -409.813
margin_right = 1472.0
margin_bottom = 1062.19
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
use_parent_material = true
margin_left = 1472.0
margin_top = -409.813
margin_right = 2944.0
margin_bottom = 1062.19
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="."]
use_parent_material = true
margin_left = 2944.0
margin_top = -409.813
margin_right = 4416.0
margin_bottom = 1062.19
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[node name="Tween3" type="Tween" parent="."]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_completed" from="Tween2" to="." method="_on_Tween2_tween_completed"]
[connection signal="tween_completed" from="Tween3" to="." method="_on_Tween3_tween_completed"]
